fix: fix align of service cat h1

--- a/wp-app/wp-content/themes/attract/assets/style/partials/service-category.scss
+++ b/wp-app/wp-content/themes/attract/assets/style/partials/service-category.scss
@@ -7,6 +7,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-align: center;
             border-radius: 60px;
             overflow: hidden;
             z-index: 1;
